<resources>
    <string name="app_name">Silly Music Player</string>
    <string name="play_my_mood">Play My Mood</string>
    <string name="your_mood_is">Your Mood is: </string>
    <string name="mood_icon">Mood icon</string>
    <string name="judging_your_mood">Judging your mood ..</string>
    <string name="loading_your_playlist">Loading your playlist ..</string>
    <string name="face_detected">For recognizing your mood, \n Your face will be detected</string>
</resources>
