<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="#1F1D1E">

    <ImageView
        android:id="@+id/main_imageview"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/mood_icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3"
        app:srcCompat="@mipmap/ic_camera"
        android:elevation="0dp"/>

    <Button
        android:id="@+id/main_mood_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/button_back"
        android:padding="16dp"
        android:text="@string/play_my_mood"
        app:layout_constraintEnd_toEndOf="@+id/main_imageview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/main_imageview"
        app:layout_constraintTop_toBottomOf="@+id/main_imageview" />

    <TextView
        android:id="@+id/main_info_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/face_detected"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/main_mood_btn"
        app:layout_constraintStart_toStartOf="@+id/main_mood_btn"
        app:layout_constraintTop_toBottomOf="@+id/main_mood_btn"
        app:layout_constraintVertical_bias="0.285" />

</androidx.constraintlayout.widget.ConstraintLayout>